# potplayer-realtime-translation-plugin

./: .gitignore  CLAUDE.md  README.md  install_plugin.bat  start.bat
.github/workflows/: build.yml
backend/: config.py  config.yaml  overlay.py  requirements.txt  server.py  subtitle_manager.py  translator.py  vad.py
dsp_plugin/: CMakeLists.txt  dsp.h  main.cpp
